# oh-thats-how

./: .env.example  .env.qwen3-tts.example  .env.runpod  .gitignore  CN-AI-Style-Guide.md  CN-Communications-Style-Guide.md  Context for AI resource library and podcast.txt  Custom GPTs as of Apr 22 2026 - REVISED.docx  GPT-instructions-plaintext-dump.txt  GPT-instructions-plaintext-v2.txt  GPT-instructions-plaintext-v3.txt  New pod spin up instructions.txt  README.md  The Signal – April 19, 2026 3 -Good Script.md  launch.command  log.txt  pyproject.toml  requirements.txt  test_audio.py  the-ai-playbook.html
ai_podcast_pipeline/: artifacts.py  audio.py  cli.py  config.py  constants.py  cover.py  ingest.py  llm.py  models.py  pipeline.py  qa.py  scoring.py  script_writer.py  security.py  theme_clustering.py  theme_proposal.py  theme_research.py  utils.py  verification.py
data/: theme_bank.json
docs/: The Signal Podcast Instructions v5.md  The Signal Podcast Instructions v6.md
gpt-icons/: preview.html
sample_data/: candidates.json
schemas/: manifest.schema.json  script.schema.json  sources.schema.json
scripts/: check_openai_auth.py  eval_script_quality.py  install_qwen3_tts.sh  qwen3_tts_clone.py  qwen3_tts_clone.sh  qwen3_tts_demo.sh  qwen3_tts_generate.py  qwen3_tts_generate.sh  qwen3_voice_profile_prepare.py  qwen3_voice_profile_prepare.sh  qwen3_voice_training_pack.py  run_with_keychain_env.sh  runpod_setup.sh  runpod_start.sh  setup_macos_keychain.sh
test-gpt-instructions/: briefing-note-generator-v5.txt  cn-alt-text-generator-v5.txt  paga-gpt-v5.txt  (+12 more)
(+33 files in other folders)
